# indentalog

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml  publish-to-pypi.yml
assets/: example_1.py  example_2.py  example_3.py  record.sh
progress_decorator/: __init__.py  config.py  monitor.py
progress_decorator/wrappers/: __init__.py  callpoint.py  decorator.py  endpoint.py  function.py  iterable.py
tests/: test_output.py  utils.py
tests/fixtures/: test_class_method.html  test_complex_loop.html  test_context_manager.html  test_indented.html  test_leave.html  test_names.html  test_not_indented.html  test_simple_loop.html
