[tool.poetry]
name = "indentalog"
version = "0.1.0"
description = ""
authors = ["bastienlc <bastien.lechenadec@gmail.com>"]
readme = "README.md"
packages = [{ include = "indentalog" }]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
